# provisioner

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
.planning/phases/01-repo-scaffold-worker-skeleton/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-HUMAN-UAT.md  01-PATTERNS.md  01-RESEARCH.md  01-REVIEW.md  01-SECURITY.md  01-SKELETON.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-event-consumption-idempotency/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-PATTERNS.md  02-RESEARCH.md  02-REVIEW.md  02-VALIDATION.md  02-VERIFICATION.md  deferred-items.md
.planning/phases/03-registry-create-path-fake-adapter/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-HUMAN-UAT.md  03-PATTERNS.md  03-RESEARCH.md  03-REVIEW-FIX.md  03-REVIEW.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-event-production-outbox-relay/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-PATTERNS.md  04-RESEARCH.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/seeds/: milestone-2-coolify-and-real-deployment.md
docs/: architecture.md  conventions.md  deployment-adapter.md  events.md  local-development.md  overview.md  python-style.md
migrations/provisioning/: env.py
migrations/provisioning/versions/: 20260602_0905_add_processed_event.py  20260602_1233_add_instance_tables.py  20260603_1136_add_event_outbox.py
src/provisioning_worker/: __init__.py  __main__.py  main.py  settings.py
src/provisioning_worker/adapters/: __init__.py  console_notification.py  fake_deployment.py  m1_entitlement_resolver.py  system_clock.py  valkey_streams.py  valkey_streams_bus.py
src/provisioning_worker/events/: __init__.py  envelope.py  instance.py  subscription.py
src/provisioning_worker/infrastructure/: __init__.py  db.py  health_server.py  logging.py  observability.py  outbox_relay.py
src/provisioning_worker/modules/: __init__.py
src/provisioning_worker/modules/provisioning/: __init__.py  handlers.py  models.py  repository.py  schemas.py  service.py  spec.py  tasks.py
src/provisioning_worker/ports/: __init__.py  clock.py  deployment_adapter.py  entitlement_resolver.py  event_consumer.py  message_bus.py  notification_transport.py
src/provisioning_worker/shared/: __init__.py  errors.py  event_consumer.py  strings.py
tests/: __init__.py  conftest.py  test_boot.py  test_health.py  test_logging.py  test_observability.py  test_settings.py
tests/events/: __init__.py  test_envelope.py  test_subscription_payloads.py
tests/provisioning/: __init__.py  test_adapters.py  test_handlers.py  test_idempotency.py  test_models.py  test_outbox.py  test_repository.py  test_service.py  test_spec.py  test_tasks.py
